[package]
name = "manager"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[dependencies]
spec = { path = "../spec"}
serde_json = "1.0"
serde = { version = "1.0.63", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.3"
failure = "0.1.5"

[target."cfg(unix)".dependencies]
nix = "0.11.0"

[target.'cfg(target_os= "linux")'.dependencies]
cgroups = { path =  "../cgroups" }
micro_http = { path = "../micro_http" }
